[package]
name = "ks-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
reqwest = {version = "0.11.12",  features = ["blocking"]}
